--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.8.0",
+    "@aws-sdk/credential-providers": "^3.787.0",
+    "@mongodb-js/zstd": "^2.0.1",
+    "aws4": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
-    "mongodb": "^6.14.2",
+    "gcp-metadata": "^5.3.0",
+    "kerberos": "^2.2.2",
+    "mongodb": "^6.15.0",
+    "mongodb-client-encryption": "^6.3.0",
     "mongoose": "^8.12.1",
     "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "snappy": "^7.2.2",
+    "socks": "^2.8.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
