--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.12.1",
     "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "snappy": "^7.2.2",
@@ -31,6 +32,7 @@
     "@eslint/eslintrc": "^3",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.17.24",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
