--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mongodb": "^6.15.0",
     "mongodb-client-encryption": "^6.3.0",
     "mongoose": "^8.12.1",
-    "next": "^15.2.3",
+    "next": "^15.3.1",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "snappy": "^7.2.2",
     "socks": "^2.8.4"
   },
@@ -36,7 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "^15.3.1",
     "typescript": "^5"
   }
 }
